westeurope/baked-template-1628520316650.yaml
---
# Source: reviewer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviewer-api
  namespace: app-dev-arc
  labels:
    app: reviewer-api
spec:
  type: ClusterIP
  selector:
    app: reviewer-api
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
---
# Source: reviewer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviewer-ui
  namespace: app-dev-arc
  labels:
    app: reviewer-ui
spec:
  type: ClusterIP
  selector:
    app: reviewer-ui
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
---
# Source: reviewer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewer-api
  namespace: app-dev-arc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reviewer-api
  template:
    metadata:
      labels:
        app: reviewer-api
        aadpodidbinding: reviewer-api-label
    spec:
      containers:
      - name: reviewer-api
        image: ghcr.io/jasoncabot-ms/reviewer/api:v1.5
        ports:
        - containerPort: 5000
---
# Source: reviewer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewer-ui
  namespace: app-dev-arc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reviewer-ui
  template:
    metadata:
      labels:
        app: reviewer-ui
        aadpodidbinding: reviewer-ui-label
    spec:
      containers:
      - name: reviewer-ui
        image: ghcr.io/jasoncabot-ms/reviewer/ui:v1.5
        ports:
        - containerPort: 3000
---
# Source: reviewer/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewer
  namespace: app-dev-arc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - arc-k3s-demo-ckct76ewzj45e.westeurope.cloudapp.azure.com
    secretName: reviewer-key
  rules:
  - host: arc-k3s-demo-ckct76ewzj45e.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: reviewer-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reviewer-ui
            port:
              number: 80
